Fixed alignment

--- a/index.css
+++ b/index.css
@@ -20,6 +20,10 @@ nav {
     flex: 1 0 auto;
   }
 
+  .center-text {
+    text-align: center;
+  }
+
   .footer {
     background-color: #fff;
   }
